# pt-three-ways

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  Notes.md  README.md  conanfile.txt  main.cpp
.github/workflows/: c-cpp.yml
benchmarks/: CMakeLists.txt  Vec3Benchmarks.cpp
scenes/: ce.mtl  suzanne.mtl
scripts/: bench-6t-cornell.sh  bench-6t-suzanne.sh  bench-st-ce.sh  bench-st-cornell.sh  bench-st-owl.sh  bench-st-suzanne.sh  conan.cmake  smoke-test.sh
smallpt/: CMakeLists.txt  smallpt.cpp
src/: CMakeLists.txt
src/dod/: CMakeLists.txt  DodSpike.cpp  IntersectionRecord.h  Scene.cpp  Scene.h  TriangleVertices.h
src/fp/: CMakeLists.txt  FpSpike.cpp  Primitive.h  Random2DSampler.cpp  Random2DSampler.h  Render.cpp  Render.h  Scene.h  SceneBuilder.cpp  SceneBuilder.h  Sphere.cpp  Sphere.h  Triangle.cpp  Triangle.h
src/main/: CMakeLists.txt  PngWriter.cpp  PngWriter.h  Progressifier.cpp  WorkQueue.h  main.cpp  raw_to_png.cpp
src/math/: ApproxVec3.h  CMakeLists.txt  Camera.h  CeSupt.h  Hit.h  Norm3.cpp  Norm3.h  Norm3.impl.h  OrthoNormalBasis.cpp  OrthoNormalBasis.h  Ray.h  Samples.cpp  Sphere.cpp  Sphere.h  Triangle.cpp  Triangle.h  Vec3.cpp  Vec3.h  Vec3.impl.h
src/oo/: CMakeLists.txt  Material.cpp  Material.h  ObjLoader.cpp  ObjLoader.h  Primitive.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  SceneBuilder.cpp  SceneBuilder.h  Sphere.cpp  Sphere.h  Triangle.cpp  Triangle.h
src/smallpt/: CMakeLists.txt  smallpt.cpp
src/util/: ArrayOutput.cpp  ArrayOutput.h  CMakeLists.txt  Material.h  MaterialSpec.h  Metric.cpp  Metric.h  Metrics.h  ObjLoader.cpp  ObjLoader.h  ObjLoaderImpl.h  Progressifier.cpp  Progressifier.h  RenderParams.h  SampledPixel.cpp  SampledPixel.h  Unpredictable.h  WorkQueue.h
test/: CMakeLists.txt
test/dod/: CMakeLists.txt  SceneTests.cpp  SphereTests.cpp  TriangleTests.cpp
test/fp/: CMakeLists.txt  Random2DSamplerTests.cpp  SphereTests.cpp
test/math/: ApproxVec3.cpp  ApproxVec3.h  CMakeLists.txt  Norm3Tests.cpp  OrthoNormalBasisTests.cpp  RayTests.cpp  SphereTests.cpp  TriangleTests.cpp  Vec3Test.cpp  Vec3Tests.cpp
test/oo/: CMakeLists.txt  ObjLoaderTests.cpp  RendererTests.cpp  SphereTests.cpp
test/util/: ArrayOutputTests.cpp  CMakeLists.txt  ObjLoaderTests.cpp
