add_executable(small_pt smallpt.cpp)
if ("${CMAKE_CXX_COMPILER_ID}" MATCHES "Clang" OR "${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU")
  target_compile_options(small_pt PUBLIC -fopenmp)
elseif ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "MSVC")
  target_compile_options(small_pt PUBLIC /openmp /Zc:twoPhase- /wd4706)
endif()
find_package(OpenMP)
target_link_libraries(small_pt PUBLIC OpenMP::OpenMP_CXX)